# productive-failure-study-mode

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  concept_seed.py  course_packs.py  main.py  models.py  settings.py
backend/app/evals/: __init__.py  cases.py  runner.py
backend/app/repositories/: __init__.py  base.py  json_file.py  memory.py
backend/app/sample_course_packs/: commerce_break_even_analysis.json  engineering_moments.json  law_offer_acceptance.json  python_lists_sliding_window.json
backend/app/services/: __init__.py  mock_learning_engine.py
backend/tests/: test_concepts.py  test_cors.py  test_dashboard.py  test_eval_runner.py  test_grounded_course_packs.py  test_health.py  test_persistence.py  test_sessions.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  LIMITATIONS_AND_NEXT_STEPS.md  PRD.md  RESEARCH_MAPPING.md  REVIEWER_GUIDE.md  VALIDATION_REPORT.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/session/[id]/: page.tsx
frontend/components/: error-box.tsx  loading-panel.tsx  page-header.tsx  status-card.tsx
frontend/lib/: api.ts  format.ts  types.ts
