[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productive-failure-backend"
version = "0.1.0"
description = "FastAPI backend for Productive Failure Study Mode."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools]
packages = ["app", "app.repositories", "app.services", "app.evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
